set up payment with stripe

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -93,3 +93,10 @@
   list-style: none;
   padding-left: 0;
 }
+
+.padd-add-r {
+  padding-right: 0.75rem;
+}
+.padd-add-l {
+  padding-left: 0.75rem;
+}
