--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -5,7 +5,7 @@
   text-align: center;
 
   a {
-    color: black !important;
+    color: blue !important;
     margin: 0 !important;
     padding: 5px!important;
   }
